# runtime-analytics

./: .gitignore  README.md  __main__.py  prompt_cli.py  prompt_gui.py  pyproject.toml
runtime_analytics/: analyzer.py  loader.py  log_parser.py  logs.db  prompt_interpreter.py  prompts.py
runtime_analytics/app_config/: config.py  logger.py
runtime_analytics/app_db/: db_loader.py  db_operations.py  sql_db.py
runtime_analytics/etl/: loader.py  log_parser.py
runtime_analytics/gui/components/: header.py  sidebar.py  tab_accuracy.py  tab_admin.py  tab_aggregated_duration_comparison.py  tab_drift_analysis.py  tab_explorer.py  tab_interpreter.py  tab_predefined.py
runtime_analytics/logs/: dummy_runtime_logs.txt
runtime_analytics/ml/: duration_model.pkl  learning_store.py  predict_response_time.py  train_prompt_model.py  train_response_time_model.py  trained_prompt_model.pkl  vectorizer.pkl
runtime_analytics/ml/pipeline/: predict_duration.py  train_duration_prediction.py
runtime_analytics/repositories/: job_log_repository.py
runtime_analytics/resources/: logging.conf  prompt_catalog.yaml  prompt_config.yaml  training_prompts.csv
runtime_analytics/scripts/: command.py  generate_training_csv.py  train_prompt_model_cli.py
runtime_analytics/services/: analytics.py
runtime_analytics/utils/: data_comparison_plotter_utils.py  display.py  filters.py
tests/: dummy_log_file_generator.py  test_prompt_interpreter.py  tlp_dashboard.py
tests/etl/: test_parser.py
