[tool.poetry]
name = "runtime-analytics"
version = "0.1.0"
description = "A lightweight log analysis tool with prompt-based querying and GUI"
authors = ["Praveen Sivasamy"]
packages = [
    { include = "runtime_analytics" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = ">=2.2.0"
streamlit = ">=1.33.0"
pyarrow = ">=15.0.0"
sqlalchemy = ">=2.0.30"
pydantic = ">=2.11.5,<3.0.0"                       # pinned major version for stability
pydantic-settings = ">=2.9.1"
scikit-learn = ">=1.4.2"
numpy = ">=1.26.4"
sqlite-utils = ">=3.36.0"
pyyaml = ">=6.0"
sentence-transformers = "4.1.0"                   # fixed version to avoid model embedding incompatibility
matplotlib = ">=3.10.3"
pytest = ">=8.4.1"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
black = ">=24.4.2"
safety = ">=2.3.5"                                # adds vulnerability scanning
isort = "^6.0.1"
pylint = "^3.3.7"
mypy = "^1.16.1"

# -----------------------------
# isort: Import Sorting
# -----------------------------
[tool.isort]
combine_as_imports = true
force_single_line = false
line_length = 130
known_first_party = ["runtime_analytics"]
src_paths = ["runtime_analytics", "tests"]  # Specify directories to sort imports

# -----------------------------
# Pylint: Linting
# -----------------------------
[tool.pylint]
disable = "C0111,C0103,W1203"  # Disable some default warnings, like missing docstring and invalid names
max-line-length = 130
output-format = "text"

# -----------------------------
# mypy: Type Checking
# -----------------------------
[mypy]
# Enable strict type checking
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
show_column_numbers = true
check_untyped_defs = true

# -----------------------------
# Black: Code Formatter
# -----------------------------
[tool.black]
line-length = 130
target-version = ["py312"]
skip-string-normalization = false  # Use double quotes

# -----------------------------
# CLI Entry Points
# -----------------------------
[tool.poetry.scripts]
format = "runtime_analytics.scripts.command:format"
lint = "runtime_analytics.scripts.command:lint"
check = "runtime_analytics.scripts.command:check"
sort_imports = "runtime_analytics.scripts.command:sort_imports"
