[tool.poetry]
name = "runtime-analytics"
version = "0.2.0"
description = "A lightweight log analysis tool with prompt-based querying and GUI"
authors = ["Praveen Sivasamy"]
packages = [{ include = "runtime_analytics" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = ">=2.2.0"
streamlit = ">=1.33.0"
pyarrow = ">=15.0.0"
sqlalchemy = ">=2.0.30"
pydantic = ">=2.11.5,<3.0.0"                      # pinned for major-version stability
pydantic-settings = ">=2.1.0"
scikit-learn = ">=1.4.2"
numpy = ">=1.26.4"
sqlite-utils = ">=3.36.0"
pyyaml = ">=6.0"
tokenizers =">= 0.19"
sentence-transformers = "^2.7.0"             # compatible with transformers>=4.6.0
matplotlib = ">=3.10.3"
huggingface-hub = ">=0.20.3"
pygwalker = "^0.4.9.15"
plotly = "^6.2.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1"
ruff = "^0.4.4"                                   # Use latest for pyproject compatibility
black = ">=24.4.2"
isort = "^5.13.2"
safety = ">=2.3.5"
pylint = "^3.3.7"
mypy = "^1.16.1"
types-pyyaml = "^6.0.12.20250516"
types-requests = "^2.32.4.20250611"
pandas-stubs = "^2.3.0.250703"

[tool.black]
line-length = 130
target-version = ["py312"]

# -----------------------------
# isort Configuration
# -----------------------------
[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 130

# -----------------------------
# Ruff Configuration
# -----------------------------
[tool.ruff]
line-length = 130
lint.select = ["F401", "FA100", "ARG"]
lint.ignore = ["E741"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402"]
"__pycache__/*" = ["ALL"]

# -----------------------------
# MyPy Configuration
# -----------------------------
[tool.mypy]
strict = true
implicit_reexport = true
exclude = '''(?x)( ^\.venv.*|^\.mypy_cache|^\.pytest_cache|^build|^dist)'''
follow_imports = "silent"
python_version = "3.12"

[tool.pylint]
disable = [
    "missing-module-docstring",
   "logging-format-interpolation",
]
[[tool.mypy.overrides]]
module = "*"
disallow_untyped_calls = false

# -----------------------------
# CLI Entry Points
# -----------------------------
[tool.poetry.scripts]
format = "runtime_analytics.scripts.command:format"
lint = "runtime_analytics.scripts.command:lint"
type_check = "runtime_analytics.scripts.command:type_check"
sort_imports = "runtime_analytics.scripts.command:sort_imports"